--- a/star-wars-app/src/index.css
+++ b/star-wars-app/src/index.css
@@ -1,13 +1,52 @@
-body {
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+  --dark1: black;
+  --light1: white;
+  --dark2: darkblue;
+  --light2: lightblue;
+  background-color: var(--light1);
+  color: var(--dark1);
+}
+
+button {
+  background-color: var(--light2);
+  color: var(--dark2);
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid var(--dark2);
+}
+
+input {
+  display: block;
+  width: 95%;
+  font-weight: bold;
+  font-size: 1.1em;
+  line-height: 1.5em;
+  border: none;
+  border-bottom: 2px solid var(--dark2);
+  outline: none;
+  margin: 5px;
+}
+
+label {
+  font-weight: bold;
+  font-size: 1.1em;
+}
+
+.small {
+  font-size: small;
+  font-weight: normal;
 }
